--- a/.github/workflows/vulnerable.yml
+++ b/.github/workflows/vulnerable.yml
@@ -22,3 +22,15 @@ jobs:
           git add sensitive.txt
           git commit -m "Add sensitive file"
           git push origin main
+      - name: Debug Information
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "Workflow: ${{ github.workflow }}"
+          echo "Action: ${{ github.action }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "Head ref: ${{ github.head_ref }}"
+          echo "Base ref: ${{ github.base_ref }}"
+          echo "Event payload:"
+          cat $GITHUB_EVENT_PATH
